# dde-application-manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  lupdate.sh
.reuse/: dep5
apps/app-identifier/src/: CMakeLists.txt  main.cpp
apps/app-launch-helper/src/: CMakeLists.txt  main.cpp  types.h  variantValue.h  variantvalue.cpp
apps/dde-am-compatibility/src/: CMakeLists.txt  launcher.cpp  main.cpp
apps/dde-am/src/: CMakeLists.txt  commandexecutor.cpp  commandexecutor.h  launcher.cpp  launcher.h  main.cpp
apps/dde-application-manager/src/: CMakeLists.txt  main.cpp  utils.cpp
misc/: CMakeLists.txt
misc/bash-completion/: dde-am
misc/dbus/: org.deepin.dde.ApplicationManager1.service.in  org.desktopspec.ApplicationManager1.service.in
misc/dconf/: CMakeLists.txt  com.deepin.dde.appearance.json  com.deepin.dde.dock.json  com.deepin.dde.launcher.json
misc/dpkg/dpkg.cfg.d/: am-update-hook
misc/hooks.d/: 1-dockEnv.json.in  debFix.sh  dockEnv.sh
misc/service/: CMakeLists.txt  dde-application-manager.service
misc/systemd/: CMakeLists.txt  org.deepin.dde.Application1.Instance@.service  org.deepin.dde.Application1.Manager.service  org.deskspec.application.instance@.service  org.deskspec.application.manager.service  org.desktopspec.application.manager.service
misc/systemd/user/: dde-autostart.service.in  dde-autostart@quick-login.service.in  org.deepin.dde.ApplicationManager.service.in  org.deepin.dde.ApplicationManager1.service.in  org.desktopspec.ApplicationManager1.service.in
plugin/appLauncher/: CMakeLists.txt  launcher.cpp
src/: CMakeLists.txt  applicationHooks.cpp  applicationHooks.h  applicationchecker.cpp  applicationchecker.h  applicationmanagerstorage.cpp  applicationmanagerstorage.h  applicationmimeinfo.cpp  applicationmimeinfo.h  cgroupsidentifier.cpp  cgroupsidentifier.h  compatibilitymanager.cpp  compatibilitymanager.h  config.h.in  constant.h  define.h.in  demo.cpp  desktopentry.cpp  desktopentry.h  desktopfilegenerator.cpp  desktopfilegenerator.h  desktopfileparser.cpp  desktopfileparser.h  eventreporter.cpp  eventreporter.h  global.cpp  global.h  identifier.h  iniParser.h  launchoptions.cpp  launchoptions.h  main.cpp  mimefileparser.cpp  mimefileparser.h  propertiesForwarder.cpp  propertiesForwarder.h  systemdsignaldispatcher.cpp  systemdsignaldispatcher.h  utils.cpp
src/common/: constant.h
src/dbus/: CMakeLists.txt  applicationmanager1service.cpp  applicationmanager1service.h  applicationservice.cpp  applicationservice.h  instanceservice.cpp  instanceservice.h  jobmanager1service.cpp  jobmanager1service.h  jobservice.cpp  jobservice.h  mimemanager1service.cpp  mimemanager1service.h  prelaunchsplashhelper.cpp  prelaunchsplashhelper.h  processguesser1service.cpp  processguesser1service.h
src/frameworkdbus/: dbusbamfapplication.cpp  dbusbamfapplication.h  dbusbamfmatcher.cpp  dbusbamfmatcher.h  dbuskwaylandoutput.cpp  dbuskwaylandoutput.h  dbuskwaylandwindowmanager.cpp  dbuskwaylandwindowmanager.h  dbuslauncher.cpp  dbuslauncher.h  dbuslauncherfront.cpp  dbuslauncherfront.h  dbusplasmawindow.cpp  dbusplasmawindow.h  dbuswm.cpp  dbuswm.h  dbuswmswitcher.cpp  dbuswmswitcher.h  dbusxeventmonitor.cpp  dbusxeventmonitor.h
src/frameworkdbus/qtdbusextended/: dbusextended.h  dbusextendedabstractinterface.cpp  dbusextendedabstractinterface.h  dbusextendedpendingcallwatcher.cpp  dbusextendedpendingcallwatcher_p.h
src/frameworkdbus/types/: arealist.cpp  arealist.h  dockrect.cpp  dockrect.h  exportwindowinfo.cpp  exportwindowinfo.h  exportwindowinfolist.cpp  exportwindowinfolist.h  launcheriteminfo.cpp  launcheriteminfo.h  launcheriteminfolist.cpp  launcheriteminfolist.h  rect.cpp  rect.h  unlaunchedappmap.cpp  unlaunchedappmap.h  windowinfomap.cpp  windowinfomap.h
src/include/: demo.h  desktopentry.h  desktopicons.h  global.h
src/lib/: appinfo.cpp  appinfo.h  appinfocommon.cpp  appinfocommon.h  applaunchcontext.cpp  applaunchcontext.h  basedir.cpp  basedir.h  desktopfile.cpp  desktopfile.h  desktopinfo.cpp  desktopinfo.h  dfile.cpp  dfile.h  dlocale.cpp  dlocale.h  dstring.cpp  dstring.h  gsetting.cpp  gsetting.h  keyfile.cpp  keyfile.h  lang.h  macro.h  meminfo.cpp  meminfo.h  process.cpp  process.h  terminalinfo.cpp  terminalinfo.h  utils.cpp  utils.h  xcbutils.cpp  xcbutils.h
src/loader/: CMakeLists.txt  main.cpp
src/modules/applicationhelper/: helper.h
src/modules/apps/: alrecorder.cpp  alrecorder.h  appmanager.cpp  appmanager.h  dbusalrecorderadaptor.cpp  dbusalrecorderadaptor.h  desktopfilereader.cpp  desktopfilereader.h  dfwatcher.cpp  dfwatcher.h
src/modules/dock/: appinfo.cpp  appinfo.h  appmenu.cpp  appmenu.h  common.h  dbusadaptordock.cpp  dbusadaptordock.h  dbusadaptorentry.cpp  dbusadaptorentry.h  dbushandler.cpp  dbushandler.h  dock.cpp  dock.h  dockmanager.cpp  dockmanager.h  docksettings.cpp  docksettings.h  entries.cpp  entries.h  entry.cpp  entry.h  processinfo.cpp  processinfo.h  waylandmanager.cpp  waylandmanager.h  windowidentify.cpp  windowidentify.h  windowinfobase.h  windowinfok.cpp  windowinfok.h  windowinfox.cpp  windowinfox.h  windowpatterns.cpp  windowpatterns.h  x11manager.cpp  x11manager.h
src/modules/launcher/: category.cpp  category.h  common.h  dbusadaptorlauncher.cpp  dbusadaptorlauncher.h  launcher.cpp  launcher.h  launchermanager.cpp  launchermanager.h  launchersettings.cpp  launchersettings.h
src/modules/methods/: basic.h  instance.hpp  process_status.hpp  quit.hpp  registe.hpp  task.hpp  use_default_app_info.h  use_mime_app_info.h
src/modules/mimeapp/: mime_app.cpp  mime_app.h
src/modules/socket/: client.cpp  client.h  server.cpp  server.h
src/service/: CMakeLists.txt  applicationhelper.h  main.cpp
src/utils/: settings.cpp  settings.h  synconfig.cpp  synconfig.h  synmodule.h  synmodulebase.h
tests/: CMakeLists.txt  main.cpp  res.qrc  ut_applicationmanager.cpp  ut_desktopentry.cpp  ut_desktopfilegenerator.cpp  ut_desktopfileparser.cpp  ut_escape.cpp  ut_escapeexec.cpp  ut_hook.cpp  ut_job.cpp  ut_jobmanager.cpp  utils.cpp
tests/data/: desktopExample.desktop
(+145 files in other folders)
